--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   "remoteUser": "developer",
   "containerUser": "developer",
   "workspaceFolder": "",
-  "workspaceMount": "source=./,target=/home/developer,type=bind,consistency=cached",
+  "workspaceMount": "source=${localWorkspaceFolder},target=/home/developer,type=bind,consistency=cached",
   // host paths must exist previously e.g. mkdir -p ~/.cache/pnpm ~/.cache/go/build ~/.cache/go/pkg
   "mounts": [
     "source=${localEnv:HOME}/.cache/pnpm,target=/pnpm/store,type=bind,consistency=cached",
